Year 3/Semester I/CSU34016 - Intro to Functional Programming/Exercises/Exercise00/FailsToCompile.txt

<lots of stuff and then ...>

Building executable 'ex00' for ex00-0.1.0.0..
[1 of 2] Compiling Ex00
            
/Users/butrfeld/REPOS/CSU34016-materials/exercises/Exercise00/src/Ex00.hs:5:14: error:
    • No instance for (Num String) arising from the literal ‘01234567’
    • In the expression: 01234567
      In an equation for ‘idno’: idno = 01234567
  |         
5 | idno      =  01234567    -- replace with your student id
  |              ^^^^^^^^
            
Progress 1/2

--  While building package ex00-0.1.0.0 (scroll up to its section to see the error) using:
      /Users/butrfeld/.stack/setup-exe-cache/x86_64-osx/Cabal-simple_mPHDZzAJ_3.2.1.0_ghc-8.10.7 --builddir=.stack-work/dist/x86_64-osx/Cabal-3.2.1.0 build lib:ex00 exe:ex00 test:ExerciseZero --ghc-options " -fdiagnostics-color=always"
    Process exited with code: ExitFailure 1
